k8s/pgweb/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pgweb
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
