k8s/pgweb/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pgweb
  namespace: pgweb
spec:
  selector:
    app: pgweb
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
