k8s/pgweb/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgweb
  namespace: pgweb
spec:
  ingressClassName: traefik
  rules:
    - host: pgweb.home.charliewillis.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgweb
                port:
                  number: 80
